fixed game finder spacing

--- a/aemedge/styles/styles.css
+++ b/aemedge/styles/styles.css
@@ -501,11 +501,14 @@ main .icon-still-have-questions img {
   padding: 8%;
 }
 
+.section.game-finder-container{
+  padding: 0;
+}
+
 .section.game-finder-container .game-finder-wrapper
 {
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 10px;
+    width: 83.3333%;
+    margin-left: 8.33%;
     max-width: 1440px;
 }
 
